# neo1

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/agents/: neo1.agent.md
docs/: neo1-milestone-plan.md  vaci-milestone-plan.md  vaci-v0-vcffa1-baseline.md  vcffa1-v0-baseline.md
lib/fatfs/source/: diskio.c
ref/cffa1/: NOTES.md
src/: hid_app.c  msc_app.c  tusb_config.h
src/chips/: wdc65C02cpu.h
src/ram/: README.md  gen_cffa1_m2_header.py  gen_m2_header.py  gen_vaci_header.py  neo1_cffa1_m2.cfg  neo1_cffa1_m2_blockdrv.h  neo1_cffa1_m2_blockdrv.s  neo1_loader.cfg  neo1_msc_boot_loader.h  neo1_msc_phase2_loader.h  neo1_msc_phase2_loader_00_99.s  neo1_vaci_v1.cfg  neo1_vaci_v1.h  neo1_vaci_v1.s
src/roms/: README.md  neo1_apple1_rom_image.h  neo1_apple1_video_rom_image.h  neo1_roms.h  neo1_system_rom_image.h
src/systems/: neo1.h  neo1_msc.h
systems/: CMakeLists.txt
systems/apple1/src/: apple1.c  apple1_usb.h  apple1_video.c  apple1_video.h  console_font_8x8.c  console_font_8x8.h  neo1_terminal.c  neo1_terminal.h
systems/neo1-23/: CMakeLists.txt
systems/neo1-23/src/: apple1.c  apple1_usb.c  neo1.c  neo1_cffa1.c  neo1_cffa1.h  neo1_msc.c  neo1_msc.h  neo1_terminal.h  neo1_usb.c  neo1_usb.h  neo1_video.c  utils.s
systems/neo1-x/: CMakeLists.txt
systems/neo1-x/src/: neo1.c  neo1_cffa1.c  neo1_cffa1.h  neo1_msc.c  neo1_msc.h  neo1_terminal.c  neo1_terminal.h  neo1_usb.c  neo1_usb.h  neo1_video.c  neo1_video.h
